--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start-prod": "node app.js",
     "test": "jest",
     "eslint": "eslint \"./**/*.{js,jsx}\"",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "test:e2e": "cypress run"
   },
   "repository": {
     "type": "git",
@@ -46,6 +47,8 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "cypress": "^6.1.0",
+    "eslint-plugin-cypress": "^2.11.2",
     "express": "^4.17.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
