--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -15,3 +15,5 @@ jobs:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: "pokedex-img-list" #Must be unique in Heroku
           heroku_email: "nanyang@kth.se"
+          healthcheck: "https://pokedex-img-list.herokuapp.com/health"
+          checkstring: "ok"
