--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -17,3 +17,4 @@ jobs:
           heroku_email: "nanyang@kth.se"
           healthcheck: "https://pokedex-img-list.herokuapp.com/health"
           checkstring: "ok"
+          rollbackonhealthcheckfailed: true
