--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -4,7 +4,10 @@ on:
   push:
     branches:
       - master
-
+  pull_request:
+    branches: [master]
+    types: [opened, synchronize]
+      
 jobs:
   hello_world_job:
     runs-on: ubuntu-18.04
