--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,5 +12,6 @@ jobs:
       - uses: actions/checkout@v2
       - name: commit messages
         env:
+          COMMIT_MESSAGES: ${{ github.event.commits.*.message }}
           SKIP: ${{ contains(github.event.commits.*.message, '#skip') }}
-        run: echo "$SKIP"
+        run: echo "$COMMIT_MESSAGES"
