--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,6 +12,5 @@ jobs:
       - uses: actions/checkout@v2
       - name: commit messages
         env:
-          COMMIT_MESSAGES: ${{ github.event.commits.message }}
-          SKIP: ${{ contains(github.event.commits.*.message, '#skip') }}
-        run: echo "$COMMIT_MESSAGES"
+          SKIP: ${{ contains(github.event.head_commit.message, '#skip') }}
+        run: echo "$SKIP"
