--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,4 +13,5 @@ jobs:
       - name: commit messages
         env:
           SKIP: ${{ contains(github.event.head_commit.message, '#skip') }}
+        if: ${{ ${SKIP} == true }}
         run: echo "$SKIP"
