--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -1,23 +1,23 @@
-# name: Hello World!
+name: Hello World!
 
-# on:
-#   push:
-#     branches:
-#       - master
-#   pull_request:
-#     branches: [master]
-#     types: [opened, synchronize]
+on:
+  push:
+    branches:
+      - master
+  pull_request:
+    branches: [master]
+    types: [opened, synchronize]
 
-# jobs:
-#   hello_world_job:
-#     runs-on: ubuntu-18.04
-#     steps:
-#       - name: Say hello
-#         run: |
-#           echo "Hello World!"
-#       - name: Now it is
-#         run: |
-#           date
-#       - name: Directory content
-#         run: |
-#           ls -l
+jobs:
+  hello_world_job:
+    runs-on: ubuntu-18.04
+    steps:
+      - name: Say hello
+        run: |
+          echo "Hello World!"
+      - name: Now it is
+        run: |
+          date
+      - name: Directory content
+        run: |
+          ls -l
