--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -29,20 +29,20 @@ jobs:
           custom_payload: |
             {
               attachments: [{
-                color: 'danger',
+                color: 'good',
                 text: `a new version deployed to https://pokedex-img-list.herokuapp.com (${process.env.AS_COMMIT}) by ${process.env.AS_AUTHOR} build took ${process.env.AS_TOOK}`,
               }]
             }
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }} # required
-        if: success()
+        if: ${{ !contains(github.event.head_commit.message, '#skip') && github.event_name == 'push' && success()}}
       - uses: 8398a7/action-slack@v3
         with:
           status: ${{ job.status }}
           fields: repo,message,commit,author,action,eventName,ref,workflow,job,took # selectable (default: repo,message)
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }} # required
-        if: failure()
+        if: ${{ !contains(github.event.head_commit.message, '#skip') && github.event_name == 'push' && failure()}}
       - uses: actions/checkout@v2
       - name: Bump version and push tag
         if: ${{ !contains(github.event.head_commit.message, '#skip') && github.event_name == 'push' }}
